Deploy jerryjrchen/jerryjrchen.github.io to github.com/jerryjrchen/jerryjrchen.github.io.git:master

--- a/cs184/final/index.html
+++ b/cs184/final/index.html
@@ -187,6 +187,7 @@ One approach involved adding a matrix to each fragment shader input that represe
 <p>Although performance depends largely on what kind of device you run the demo, we have observed a steady &gt;30 fps performance on a reasonably modern laptop (i.e. Macbook Pro 2014). It’s also possible to tweak simulation parameters, such as lowering the number of clouds or lowering the travel speed, to improve the performance.</p>
 
 <p>You can try out a demo at the top of the page. Final report video:</p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/z8-rap6ZWTw" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
 
 <h2 id="references">References</h2>
 
