Deploy jerryjrchen/jerryjrchen.github.io to github.com/jerryjrchen/jerryjrchen.github.io.git:master

--- a/cs184/final/index.html
+++ b/cs184/final/index.html
@@ -208,6 +208,8 @@ One approach involved adding a matrix to each fragment shader input that represe
 
 <p>Harry researched and attempted to find a way to shade point clouds to simulate cloud particles. Also, he added some cool lensflare to the sun.</p>
 
+<p>Tammy successfully implemented dynamic generation of imposter clouds based on depth, attempted to implement dynamic regeneration based on translation angle, and made the milestone and final videos.</p>
+
       </div>
     </main>
 
