Deploy jerryjrchen/jerryjrchen.github.io to github.com/jerryjrchen/jerryjrchen.github.io.git:master

--- a/intro/hw/hw01/index.html
+++ b/intro/hw/hw01/index.html
@@ -47,7 +47,7 @@
 
     <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <h1 id="homework-1--download">Homework 1 <a class="btn btn-default" href="../../assets/hw01.zip" role="button"><i class="fa fa-file-archive-o"></i> Download</a></h1>
+        <h1 id="homework-1--download">Homework 1 <a class="btn btn-default" href="hw01.zip" role="button"><i class="fa fa-file-archive-o"></i> Download</a></h1>
 
 <p>Please click the link at the top of the page to download. The included
 <code class="highlighter-rouge">shakespeare.txt</code> file included within is the one I used for the in-class
