Deploy jerryjrchen/jerryjrchen.github.io to github.com/jerryjrchen/jerryjrchen.github.io.git:master

--- a/intro/hw/hw01/index.html
+++ b/intro/hw/hw01/index.html
@@ -54,7 +54,8 @@
 demo. It’s not part of the assignment.</p>
 
 <h2 id="part-1">Part 1</h2>
-<p>Go through the following pages on the <a href="learnpython.org">Learn Python</a> tutorial:</p>
+<p>Go through the following pages on the <a href="https://www.learnpython.org">Learn
+Python</a> tutorial:</p>
 <ul>
   <li><a href="https://www.learnpython.org/en/Hello%2C_World%21">Hello, World!</a></li>
   <li><a href="https://www.learnpython.org/en/Variables_and_Types">Variables and Types</a></li>
