Deploy jerryjrchen/jerryjrchen.github.io to github.com/jerryjrchen/jerryjrchen.github.io.git:master

--- a/intro/hw/hw02/index.html
+++ b/intro/hw/hw02/index.html
@@ -9,12 +9,12 @@
   
   
   
-  <title>Coding Intro</title>
+  <title>Homework 2</title>
   <meta name="description" content="Jerry Chen&#39;s website">
   
 
   <link rel="stylesheet" href="/assets/main.css">
-  <link rel="canonical" href="http://jerryjrchen.com/intro/">
+  <link rel="canonical" href="http://jerryjrchen.com/intro/hw/hw02/">
   
   
   <link rel="alternate" type="application/rss+xml" title="jerryjrchen" href="http://jerryjrchen.com/feed.xml">
@@ -30,7 +30,7 @@
   
   <meta name="twitter:card" content="summary">
   
-  <meta name="twitter:title" content="Coding Intro">
+  <meta name="twitter:title" content="Homework 2">
   <meta name="twitter:description" content="Jerry Chen&#39;s website">
   
   
@@ -47,36 +47,24 @@
 
     <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="container-fluid">
+        <h1 id="homework-2">Homework 2</h1>
 
-  <h3 id="me-jerry-chen-jerryjrchenicloudcom"><strong>Me:</strong> Jerry Chen (<a href="mailto:jerryjrchen@icloud.com">jerryjrchen@icloud.com</a>)</h3>
+<h2 id="course-survey">Course survey</h2>
+<p><a href="https://v.gd/zowosu">https://v.gd/zowosu</a></p>
 
-  <p>Welcome to the course webpage!</p>
+<h2 id="creating-a-webpage">Creating a webpage</h2>
+<p>Create your own personal webpage using HTML! Experiment with different tags, like headers, bulleted lists, and so on. You can search online for examples of how to do this. <a href="https://www.w3schools.com/html/html_basic.asp">This site</a> may be helpful.</p>
 
-  <h2 id="resources">Resources</h2>
-
-  <table class="table table-striped table-hover" id="resources">
-    <thead>
-      <tr>
-        <th style="text-align: left">Day #</th>
-        <th style="text-align: left">Description</th>
-        <th style="text-align: left">Downloads</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td style="text-align: left">1</td>
-        <td style="text-align: left">Introduction, Expressions, and Statements</td>
-        <td style="text-align: left"><a href="assets/day01.pdf" class="btn btn-raised btn-default">Slides</a> <a href="assets/note01.pdf" class="btn btn-raised btn-default">Notes</a> <a href="hw/hw01" class="btn btn-raised btn-default">HW</a></td>
-      </tr>
-      <tr>
-        <td style="text-align: left">2</td>
-        <td style="text-align: left">HTML</td>
-        <td style="text-align: left"><a href="assets/note02.pdf" class="btn btn-raised btn-default">Notes</a> <a href="hw/hw02" class="btn btn-raised btn-default">HW</a></td>
-      </tr>
-    </tbody>
-  </table>
-</div>
+<p>Include at least <strong>five</strong> of the following:</p>
+<ul>
+  <li>Add a page title. This should go in the <a href="https://www.w3schools.com/tags/tag_title.asp">head of your webpage</a>.</li>
+  <li>A picture of yourself and/or an animal you identify with (you will probably want to put your image in the same folder as <code class="highlighter-rouge">index.html</code>).</li>
+  <li>A web link to a recent project or assignment you’ve created.</li>
+  <li>Numbered steps for a chocolate chip cookie recipe.</li>
+  <li>A table of experimental results from a real or imaginary experiment.</li>
+  <li>Embed a Youtube/Vimeo video (hint: clicking the share button will give you HTML embed code to include in your webpage).</li>
+  <li>Embed a map from Google Maps or OpenStreetMap.</li>
+</ul>
 
       </div>
     </main>
