--- a/intro/index.html
+++ b/intro/index.html
@@ -74,6 +74,11 @@
         <td style="text-align: left">HTML</td>
         <td style="text-align: left"><a href="assets/note02.pdf" class="btn btn-raised btn-default">Notes</a> <a href="hw/hw02" class="btn btn-raised btn-default">HW</a></td>
       </tr>
+      <tr>
+        <td style="text-align: left">3</td>
+        <td style="text-align: left">CSS</td>
+        <td style="text-align: left"><a href="assets/note03.pdf" class="btn btn-raised btn-default">Notes</a> <a href="hw/hw03" class="btn btn-raised btn-default">HW</a></td>
+      </tr>
     </tbody>
   </table>
 </div>
