Deploy jerryjrchen/jerryjrchen.github.io to github.com/jerryjrchen/jerryjrchen.github.io.git:master

--- a/intro/hw/hw03/index.html
+++ b/intro/hw/hw03/index.html
@@ -63,7 +63,7 @@
 
 <blockquote>
   <p>Webkit is only supported by Safari and Chrome. If you’re not using
-Safari or Chrome, <a href="*https://stackoverflow.com/a/3468311">you will need a different CSS
+Safari or Chrome, <a href="https://stackoverflow.com/a/3468311">you will need a different CSS
 prefix</a>.</p>
 </blockquote>
 
