--- a/intro/proj/caesar/index.html
+++ b/intro/proj/caesar/index.html
@@ -76,7 +76,7 @@ examples out yourself, here’s an <a href="http://www.xarg.org/tools/caesar-cip
 
 <h2 id="additional-details">Additional Details</h2>
 <ul>
-  <li>It’s recommended to fill in the functions from top to bottom:
+  <li>It’s recommended that you fill in the functions from top to bottom:
     <ul>
       <li><code class="highlighter-rouge">shift_letter</code></li>
       <li><code class="highlighter-rouge">caesar_encode</code></li>
