Deploy jerryjrchen/jerryjrchen.github.io to github.com/jerryjrchen/jerryjrchen.github.io.git:master

--- a/intro/proj/caesar/index.html
+++ b/intro/proj/caesar/index.html
@@ -57,7 +57,11 @@ positions down the alphabet to produce the encrypted result.</p>
 
 <p>Your challenge is to implement the Caesar cipher in Python! Fill in the
 code so that we can both encode <strong>and</strong> decode text. All code you need to
-edit is located in caesar.py.</p>
+edit is located in <code class="highlighter-rouge">caesar.py.</code></p>
+
+<blockquote>
+  <p>You do not need to read or understand the contents of <code class="highlighter-rouge">cipher.py</code>.</p>
+</blockquote>
 
 <h2 id="examples">Examples</h2>
 <p>For example, with a right shift of 3, the letter ‘a’ is replaced with ‘d’, ‘m’
