--- a/intro/index.html
+++ b/intro/index.html
@@ -79,6 +79,11 @@
         <td style="text-align: left">CSS</td>
         <td style="text-align: left"><a href="assets/note03.pdf" class="btn btn-raised btn-default">Notes</a> <a href="hw/hw03" class="btn btn-raised btn-default">HW</a></td>
       </tr>
+      <tr>
+        <td style="text-align: left">4</td>
+        <td style="text-align: left">Control</td>
+        <td style="text-align: left"><a href="assets/day04.pdf" class="btn btn-raised btn-default">Slides</a> <a href="assets/note04.pdf" class="btn btn-raised btn-default">Notes</a> <a href="hw/hw04" class="btn btn-raised btn-default">HW</a> <a href="proj/caesar" class="btn btn-raised btn-default">Project</a></td>
+      </tr>
     </tbody>
   </table>
 </div>
