Deploy jerryjrchen/jerryjrchen.github.io to github.com/jerryjrchen/jerryjrchen.github.io.git:master

--- a/intro/hw/hw04/index.html
+++ b/intro/hw/hw04/index.html
@@ -75,6 +75,31 @@ displayed. To fix your problem, try testing things out in the interpreter!</p>
 correct folder. You may have to use <code class="highlighter-rouge">cd</code> to change directories, and use
 <code class="highlighter-rouge">ls</code> to make sure the file is there.</p>
 
+<h2 id="instructions-for-hailstone">Instructions for Hailstone</h2>
+
+<p><a href="https://inst.eecs.berkeley.edu/~cs61a/sp18/hw/hw01/#q5">Credit to CS 61A Spring
+2018</a></p>
+
+<p>Douglas Hofstadter’s Pulitzer-prize-winning book, Gödel, Escher, Bach,
+poses the following mathematical puzzle.</p>
+
+<ul>
+  <li>Pick a positive integer <code class="highlighter-rouge">n</code> as the start.</li>
+  <li>If <code class="highlighter-rouge">n</code> is even, divide it by 2.</li>
+  <li>If <code class="highlighter-rouge">n</code> is odd, multiply it by 3 and add 1.</li>
+  <li>Continue this process until <code class="highlighter-rouge">n</code> is 1.</li>
+</ul>
+
+<p>The number <code class="highlighter-rouge">n</code> will travel up and down but eventually end at 1 (at least
+for all numbers that have ever been tried – nobody has ever proved that
+the sequence will terminate). Analogously, a hailstone travels up and down
+in the atmosphere before eventually landing on earth.</p>
+
+<p>This sequence of values of <code class="highlighter-rouge">n</code> is often called a Hailstone sequence, Write
+a function that takes a single argument with formal parameter name <code class="highlighter-rouge">n</code>,
+prints out the hailstone sequence starting at <code class="highlighter-rouge">n</code>, and returns the number
+of steps in the sequence.</p>
+
       </div>
     </main>
 
