Deploy jerryjrchen/jerryjrchen.github.io to github.com/jerryjrchen/jerryjrchen.github.io.git:master

--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
 </div>
 
 
-    <p>Hi there! I just finished my undergrad in electrical engineering and
-computer science at UC Berkeley.</p>
+    <p>Hi there! I’m a software engineer at Apple.</p>
 
 <ul>
+  <li>In 2018, I finished my <a href="https://www.dropbox.com/s/kgnbj14qclvjjxe/Jerry-Chen-Resume-R.pdf?dl=0">undergrad in EECS at UC Berkeley</a>.</li>
   <li>In a past life, I’ve taught <a href="/cs61a">CS 61A</a>.</li>
   <li>Take a look at my <a href="/coursework">past coursework</a>.</li>
 </ul>
